{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 108,
  "lineage": "68606ad1-58a8-2312-d254-122bb00d6c2e",
  "resources": [
    {
      "module": "module.jenkins_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08697da0e8d9f59ec",
            "arn": "arn:aws:ec2:eu-central-1:455185968385:instance/i-0f14f5ad49ca45fde",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-instance-profile",
            "id": "i-0f14f5ad49ca45fde",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f47fa30b17c5935f"
              }
            ],
            "primary_network_interface_id": "eni-0f47fa30b17c5935f",
            "private_dns": "ip-10-0-1-235.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "public_ip": "3.73.123.138",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06cfbf49eb45d5817",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098bed4852155ad73",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": ["sg-072425fc5d8a4be61"]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455185968385",
            "id": "i-0f14f5ad49ca45fde",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.jenkins_server.aws_iam_instance_profile.ssm_instance_profile",
            "module.jenkins_server.aws_iam_role.ssm_role",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.SG_SubnetJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0107f15f9743ea2b6",
            "arn": "arn:aws:ec2:eu-central-1:455185968385:elastic-ip/eipalloc-0107f15f9743ea2b6",
            "domain": "vpc",
            "id": "eipalloc-0107f15f9743ea2b6",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-35-158-23-235.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.23.235",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw_main",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:internet-gateway/igw-07fbe0f1d2a77c6ba",
            "id": "igw-07fbe0f1d2a77c6ba",
            "owner_id": "455185968385",
            "region": "eu-central-1",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0eb2a3d1ea6735ed2"
          },
          "identity_schema_version": 0,
          "dependencies": ["module.network.aws_vpc.main_vpc"]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0107f15f9743ea2b6",
            "association_id": "eipassoc-098d8f64ba3b99832",
            "connectivity_type": "public",
            "id": "nat-0a83f608708452208",
            "network_interface_id": "eni-0dec67cfcbc21fd8a",
            "private_ip": "10.0.1.27",
            "public_ip": "35.158.23.235",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-098bed4852155ad73",
            "tags": {
              "Name": "NAT-gateway"
            },
            "tags_all": {
              "Name": "NAT-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw_main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_sub_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:route-table/rtb-003623791672ab69f",
            "id": "rtb-003623791672ab69f",
            "owner_id": "455185968385",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a83f608708452208",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-tableT"
            },
            "tags_all": {
              "Name": "private-route-tableT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2a3d1ea6735ed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455185968385",
            "id": "rtb-003623791672ab69f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw_main",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_sub_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:route-table/rtb-03a66aaad9c9b2b28",
            "id": "rtb-03a66aaad9c9b2b28",
            "owner_id": "455185968385",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fbe0f1d2a77c6ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2a3d1ea6735ed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455185968385",
            "id": "rtb-03a66aaad9c9b2b28",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw_main",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aabb10d60975ac3",
            "region": "eu-central-1",
            "route_table_id": "rtb-003623791672ab69f",
            "subnet_id": "subnet-0e67a4262078fc9f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw_main",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.rt_sub_private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c8ef479c29474ba",
            "region": "eu-central-1",
            "route_table_id": "rtb-03a66aaad9c9b2b28",
            "subnet_id": "subnet-098bed4852155ad73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw_main",
            "module.network.aws_route_table.rt_sub_public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:subnet/subnet-0e67a4262078fc9f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e67a4262078fc9f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "455185968385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "private-subnet-Jenkins"
            },
            "tags_all": {
              "Name": "private-subnet-Jenkins"
            },
            "vpc_id": "vpc-0eb2a3d1ea6735ed2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455185968385",
            "id": "subnet-0e67a4262078fc9f9",
            "region": "eu-central-1"
          },
          "dependencies": ["module.network.aws_vpc.main_vpc"]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:subnet/subnet-098bed4852155ad73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098bed4852155ad73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "455185968385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0eb2a3d1ea6735ed2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455185968385",
            "id": "subnet-098bed4852155ad73",
            "region": "eu-central-1"
          },
          "dependencies": ["module.network.aws_vpc.main_vpc"]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:vpc/vpc-0eb2a3d1ea6735ed2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbff46d3124852c9",
            "default_route_table_id": "rtb-02e98cebde31c02f9",
            "default_security_group_id": "sg-0c8e3a572d1ea7169",
            "dhcp_options_id": "dopt-0c46f8c4ddcdeed18",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb2a3d1ea6735ed2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e98cebde31c02f9",
            "owner_id": "455185968385",
            "region": "eu-central-1",
            "tags": {
              "Name": "Main-VPC"
            },
            "tags_all": {
              "Name": "Main-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_SubnetJenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:455185968385:security-group/sg-072425fc5d8a4be61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072425fc5d8a4be61",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251003084302662500000001",
            "name_prefix": "terraform-",
            "owner_id": "455185968385",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-Consul-SG"
            },
            "tags_all": {
              "Name": "Jenkins-Consul-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2a3d1ea6735ed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455185968385",
            "id": "sg-072425fc5d8a4be61",
            "region": "eu-central-1"
          },
          "dependencies": ["module.network.aws_vpc.main_vpc"]
        }
      ]
    }
  ]
}